Fixed not-covered line colors.

--- a/styles/details.scss
+++ b/styles/details.scss
@@ -1,6 +1,6 @@
 $line-color-covered: #e6f5d0;
-$line-color-not-covered: #fccccc;
-$line-color-dark-not-covered: #fcdfdf;
+$line-color-not-covered: #fcdfdf;
+$line-color-dark-not-covered: #fccccc;
 
 .coverage {
     display: flex;
